<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context="in.mol.labourinspection.LicenseListActivity">

    <TextView
        android:id="@+id/tv_title"
        style="@style/textview_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:text="Act List" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/tv_header"
        style="@style/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="Select Act for License no:" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginBottom="20dp"
        android:background="@color/grey" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_act_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/act_1948" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/ll_act_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/act_1936" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/ll_act_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/act_1976" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/ll_act_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/act_1965" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/ll_act_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/act_1983" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/ll_act_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/act_1966" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/ll_act_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/act_1970" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/ll_act_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/act_1961" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/ll_act_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/act_1976_sales" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/ll_act_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/act_1996" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/ll_act_11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/act_1955" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/ll_act_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/act_1979" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/ll_act_13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/act_1961_maternity" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/ll_act_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/act_1972" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/ll_act_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/act_1986" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
